--- a/Box-Sizing/index.html
+++ b/Box-Sizing/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="element">
-        Modificando el archivo
+        Modificando el archivo -
     </div>
     
 </body>
