--- a/Pacman-con-bordes/index.html
+++ b/Pacman-con-bordes/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BACKGROUND</title>
+    <title>PACMAN</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="background"></div>
-    <div class="gradiente"></div>
+    <div class="pacman"></div>
 </body>
 </html>
