position 2da parte

--- a/Posición/index.html
+++ b/Posición/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Position</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -13,5 +14,18 @@
         <div class="position absolute">Absolute</div>
         <div class="position fixed">Fixed</div>
     </div>
+
+    <h2>Posicionamiento Sticky - Baje para ver como se pega el elemento</h2>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque tempora
+        repellendus officia. Adipisci eos, quasi delectus architecto voluptatem, 
+        id iste molestiae vel aliquam quisquam autem unde itaque placeat ratione. 
+        Beatae!
+    </p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque tempora
+        repellendus officia. Adipisci eos, quasi delectus architecto voluptatem, 
+        id iste molestiae vel aliquam quisquam autem unde itaque placeat ratione. 
+        Beatae!
+    </p>
+    <div class="position sticky">Sticky</div>
 </body>
 </html>
