--- a/Posición/index.html
+++ b/Posición/index.html
@@ -27,5 +27,8 @@
         Beatae!
     </p>
     <div class="position sticky">Sticky</div>
+    <div class="container">
+        <div class="position stickycontainer">Sticky Container</div>
+    </div>
 </body>
 </html>
