--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="hero">
+        <section class="hero-container">
+            <figure class="hero-pic">
+                <img src="assets/undraw_programming_re_kg9v.svg" alt="Programing" class="hero-img">
+            </figure>
+
+            <div class="hero-texts">
+                <h2 class="hero-title">Practica de CSS</h2>
+                <p class="hero-copy">
+                    Aprende desarrollo web con HTML5, CSS y JavaScript. Backend con Python,
+                    React, Go, Laravel. Desarrollo movil con Android, Flutter y mucho más. 
+                    Desde tu casa
+                </p>
+                <a href="#" class="hero-cta">Aprende Ahora...</a>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
